@@ -1,7 +1,8 @@
 package coms.w4156.moviewishlist.models;
 
+import com.fasterxml.jackson.annotation.JsonProperty;
 import java.util.List;
-
+import java.util.stream.Collectors;
 import javax.persistence.CascadeType;
 import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
@@ -13,22 +14,18 @@ import javax.persistence.ManyToMany;
 import javax.persistence.ManyToOne;
 import javax.persistence.Table;
 import javax.persistence.UniqueConstraint;
-
-import org.springframework.lang.Nullable;
-
-import com.fasterxml.jackson.annotation.JsonProperty;
-
 import lombok.Builder;
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import lombok.ToString;
+import org.springframework.lang.Nullable;
 
 @Entity
 @Table(
     name = "wishlists",
-    uniqueConstraints = @UniqueConstraint(columnNames = { "name", "user_id" })
+    uniqueConstraints = @UniqueConstraint(columnNames = { "name", "profile_id" })
 )
 @ToString
 @EqualsAndHashCode
@@ -54,37 +51,39 @@ public class Wishlist implements ModelInterface<Long> {
     private String name;
 
     /**
-     * The user that owns this wishlist.
+     * The profile that owns this wishlist.
      */
     @ManyToOne
-    @JoinColumn(name = "user_id")
+    @JoinColumn(name = "profile_id")
     @Setter
-    private User user;
+    private Profile profile;
 
     /**
      * The movies within this wishlist.
      */
     @ManyToMany(cascade = CascadeType.DETACH)
     @JoinTable(
-            name = "wishlist_movies",
-            joinColumns = @JoinColumn(name = "wishlist_id"),
-            inverseJoinColumns = @JoinColumn(name = "movie_id")
+        name = "wishlist_movies",
+        joinColumns = @JoinColumn(name = "wishlist_id"),
+        inverseJoinColumns = @JoinColumn(name = "movie_id")
+                            
     )
     @Setter
+    @Getter
     private List<Movie> movies;
 
     /**
      * Constructor to create a new Wishlist Object.
      *
      * @param name - Name of the wishlist
-     * @param user - The user that this wishlist belongs to
+     * @param profile - The profile that this wishlist belongs to
      */
     public Wishlist(
         @JsonProperty final String name,
-        @JsonProperty final User user
+        @JsonProperty final Profile profile
     ) {
         this.name = name;
-        this.user = user;
+        this.profile = profile;
     }
 
     /**
@@ -92,28 +91,37 @@ public class Wishlist implements ModelInterface<Long> {
      *
      * @param id - ID of the wishlist
      * @param name - Name of the wishlist
-     * @param user - The user that this wishlist belongs to
+     * @param profile - The profile that this wishlist belongs to
      * @param movies - The movies within this wishlist
      */
     public Wishlist(
         @JsonProperty final Long id,
         @JsonProperty final String name,
-        @JsonProperty final User user,
+        @JsonProperty final Profile profile,
         @JsonProperty final List<Movie> movies
     ) {
         this.id = id;
         this.name = name;
-        this.user = user;
+        this.profile = profile;
         this.movies = movies;
     }
 
     /**
-     * Get the email of the user that owns this wishlist.
+     * Get the Id of the profile that owns this wishlist.
      *
-     * @return the email string
+     * @return the Id of the profile
      */
-    public String getUserId() {
-        return this.user.getEmail();
+    public Long getProfileId() {
+        return this.profile.getId();
+    }
+
+    /**
+     * Get the Id of the cleint responsible for this wishlist.
+     *
+     * @return the Id of the client
+     */
+    public Long getClientId() {
+        return this.profile.getClientId();
     }
 
     /**
@@ -122,10 +130,30 @@ public class Wishlist implements ModelInterface<Long> {
      * @return A list of Long Ids
      */
     public List<Long> getMovieIds() {
+        return this.movies.stream().map(movie -> movie.getId()).toList();
+    }
+
+    public List<Movie> getMoviesByGenre(String genre){
+        return   this.movies.stream()
+                .collect(Collectors.filtering(
+                        movie -> movie.getMovie_gener().equalsIgnoreCase(genre), Collectors.toList()));
+    }
+
+    public List<Movie> getMoviesByReleaseYear(String movieReleaseYear){
         return this.movies.stream()
-            .map(movie -> movie.getId())
-            .toList();
+                .collect(Collectors.filtering(
+                        movie -> movie.getMovie_release_year().equalsIgnoreCase(movieReleaseYear) , Collectors.toList()));
+    }
+
+    public List<Movie> getMoviesByRuntime(int runtime){
+        return this.movies.stream()
+                .collect(Collectors.filtering(
+                        movie -> movie.getMovie_runtime() == runtime , Collectors.toList()));
+    }
+
+    public List<Movie> getMoviesByCriticScore(int critic_score){
+        return this.movies.stream()
+                .collect(Collectors.filtering(
+                        movie -> movie.getCritic_score() == critic_score , Collectors.toList()));
     }
 }
-
-
